# CPPLearning

./: .gitignore  CMakeLists.txt  LICENSE  README.md
calculator/: CMakeLists.txt  main
calculator/include/: utils.hpp
calculator/src/: Evaluator.cpp  Evaluator.hpp  Parser.cpp  Parser.hpp  Tokenizer.cpp  Tokenizer.hpp  main.cpp
sensor/: CMakeLists.txt
sensor/include/: DistanceSensor.hpp  PressureSensor.hpp  Sensor.hpp  TemperatureSensor.hpp
sensor/src/: DistanceSensor.cpp  PressureSensor.cpp  Sensor.cpp  TemperatureSensor.cpp  test_sensor.cpp
sensorManager/: CMakeLists.txt
sensorManager/include/: SensorManager.hpp
sensorManager/src/: SensorManager.cpp  sensor_manager_test.cpp
